# install-sync

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .python-semantic-release.toml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  TOKEN_SETUP.md  build.py  build_script.py  cli_entry.py  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
install_sync/: __init__.py  config_utils.py  git_manager.py  main.py  models.py  package_managers.py  repo_manager.py  symbols.py
test_gitignore/: .gitignore  README.md
tests/: test_models.py
